# DemoRecordFix_mm

./: .gitignore  AMBuildScript  AMBuilder  CMakeLists.txt  PackageScript  README.md
.github/workflows/: main.yml
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
makefiles/: linux.base.cmake  protobuf.cmake  shared.cmake  windows.base.cmake
makefiles/metamod/: configure_metamod.cmake  demo_record_fix.vdf.in  hammer_id_fix.vdf.in
src/: mempatch.cpp  mempatch.h  plat_win.cpp  plugin.cpp  plugin.h  utils.hpp
src/sdk/: CServerSideClient.h
